gitops/applications/tic-tac-toe/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tic-tac-toe

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tic-tac-toe
      version: v1

  template:
    metadata:
      labels:
        app: tic-tac-toe
        version: v1

    spec:

      containers:
      - name: tic-tac-toe

        image: agdevopsacr2026.azurecr.io/tic-tac-toe:19ad627dac525269a446cb953bb0765e6e3ffec4

        imagePullPolicy: Always

        ports:
        - containerPort: 5001

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true

      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-keyvault"
