gitops/applications/tic-tac-toe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tic-tac-toe-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: tic-tac-toe
                port:
                  number: 80
